--- a/packages/app-elements/src/components/AppHeader/AppHeader.scss
+++ b/packages/app-elements/src/components/AppHeader/AppHeader.scss
@@ -10,7 +10,7 @@
   width: 100%;
   // icon(80) + gap(16) + title(~36) + gap(4) + subtitle(~24) + padding(48+64)
   min-height: 272px;
-  padding: var(--space-12) var(--space-4) var(--space-16);
+  padding: var(--space-12) var(--space-4);
   background: var(--bg-fill-brand);
   font-family: var(--font-family);
 }
